Initial release with new icons & artwork

--- a/db/7e3f3d4078aa797ff831e9bc3fbbfe46.ini
+++ b/db/7e3f3d4078aa797ff831e9bc3fbbfe46.ini
@@ -1,6 +1,6 @@
 [General]
-Description=Internal data for buStopSevilla app.
+Description=Internal data for buStopMadrid app.
 Driver=QSQLITE
 EstimatedSize=1000000
-Name=bustopsevillaDB
+Name=bustopmadridDB
 Version=1.0
