--- a/harbour-bustopmadrid.desktop
+++ b/harbour-bustopmadrid.desktop
@@ -1,12 +1,12 @@
 [Desktop Entry]
 Type=Application
 X-Nemo-Application-Type=silica-qt5
-Icon=harbour-bustopsevilla
-Exec=harbour-bustopsevilla
-Name=BuStopSevilla
+Icon=harbour-bustopmadrid
+Exec=harbour-bustopmadrid
+Name=BuStopMadrid
 # translation example:
 # your app name in German locale (de)
 #
 # Remember to comment out the following line, if you do not want to use
 # a different app name in German locale (de).
-#Name[de]=harbour-bustopsevilla
+#Name[de]=harbour-bustopmadrid
