--- a/db/f030227264ff499e23ced78a30037f82.ini
+++ b/db/f030227264ff499e23ced78a30037f82.ini
@@ -1,5 +1,5 @@
 [General]
-Description=Internal data for buStopMadrid app.
+Description=Internal data for hitmemap! app.
 Driver=QSQLITE
 EstimatedSize=1000000
 Name=bustopmadridDB
